апи и бд для абонементов
